<resources>
        <string name="app_name">Boston BusMap</string>
<string name="refreshButton">Refresh!</string>
<string name="runInBackgroundCheckbox">runInBackgroundKey</string>
<string name="showUnpredictableBusesCheckbox">showUnpredictableBusesKey</string>
<string name="hideCircleCheckbox">hideCircleCheckboxKey</string>
<string name="numOverlaysPreference">numOverlaysPreference</string>
<string name="getDirections">Get Directions</string>
<string name="showRouteLineCheckbox">showRouteLine</string>
<string name="showCoarseRouteLineCheckbox">showCoarseRouteLine</string>
<string name="initAllRouteInfoCheckbox2">initAllRouteInfo</string>
<string name="addToFavorites">Favorite</string>
<string name="removeFromFavorites">Favorite</string>
<string name="refresh">Refresh</string>
<string name="bostonsLocation">Boston</string>
<string name="myLocation">My Location</string>
<string name="settings">Settings</string>
<string name="findingCurrentLocation">Finding current location&#8230;</string>
<string name="noProviders">Cannot use any location service.
Are any enabled (like GPS) in your system settings?</string>
<string name="locationUnavailable">Current location is unavailable</string>
<string name="showRoutePath">Show route path?</string>
<string name="updateContinuously">Update frequency</string>
<string name="showUnpredictableBuses">Show unpredictable buses?</string>
<string name="hideBlueCircle">Hide blue circle?</string>
<string name="hideBlueCircleSummary">This shows what buses are being viewed</string>
<string name="showRoutePathSummary">Draws a line along the selected route</string>
<string name="search_hint">Search routes and places</string>
<string name="search">Search</string>
<string name="chooseRoute">Routes</string>
<string name="searchHint">Search routes</string>
<string name="commentRoute">Routes: </string>
<string name="commentStop">Stops: </string>
<string name="commentOther">Problem?</string>
<string name="commentSubmit">Send feedback</string>
<string name="moreinfo">More Info</string>
<string name="reportproblem">Report problem</string>
<string name="basicInstructions">Hello &lt;br /&gt; World\n
3</string>
<string name="chooseStop">Favorite Stops</string>
<string name="chooseStopInBuilder">Choose a stop</string>
<string name="chooseRouteInBuilder">Choose a route</string>
<string name="noalerts">No Alerts</string>
    <string name="alwaysShowLocation">Always show location?</string>
    <string name="alwaysShowLocationCheckbox">gpsAlwaysOn</string>
    <string name="alwaysShowLocationSummary">Turns on location when app is in use</string>
    <string name="all_buses">All buses (no rail)</string>
    <string name="vehicles_on_one_route">Vehicles on one route</string>
    <string name="stops_and_predictions_on_all_routes">Stops and predictions on all routes\n (no rail)</string>
    <string name="stops_and_predictions_on_one_route">Stops and predictions on one route</string>
    <string name="favorite_stops">Favorite stops</string>
    <string name="updateContinuouslyInterval">UpdateContinuouslyInterval</string>
    <string name="thereAreNoAlerts">There are currently no alerts</string>
    <string name="thereAreCurrentlyNoPredictions">There are currently no predictions for this stop</string>
    <string name="chooseMode">Choose Mode</string>
    <string name="modeOption">Mode Option</string>
    <string name="bus_directions">Vehicles by direction</string>
    <string name="busstop_directions">Stops and predictions by direction</string>
    <string name="getDirectionsCurrentLocation">Current Location</string>
    <string name="pickCurrentLocation">My Current Location</string>
    <string name="chooseAStop">Pick a stop</string>
    <string name="startingPoint">Starting point</string>
    <string name="endingPoint">Ending point</string>
    <string name="places">Places</string>
    <string name="intersection_stops">Stops and predictions that\ncross through a point on the map</string>
</resources>