<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >

    <EditText
        android:id="@+id/fromField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:focusable="false"
        android:hint="@string/startingPoint"
        />
    
    <EditText
        android:id="@+id/toField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/endingPoint"
        android:layout_below="@+id/fromField"
         />

    <Button android:id="@+id/getDirectionsButton"
        android:text="@string/getDirections"         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toField"
        />
</RelativeLayout>